implementing .js classnames, fixing mediaqueries implementations, adding var to locales/en.default.json

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -370,6 +370,7 @@
       "shipping_policy_html": "<a href=\"{{ link }}\">Shipping<\/a> calculated at checkout.",
       "quantity": "Quantity",
       "answer_the_question": "Was your lawn planted in the last 12 months?*",
+      "answer_the_question_warning": "please answer the lawn question*",
       "add_to_cart": "Add to Cart",
       "item_added_to_cart": "Item added to cart!",
       "view_cart": "View cart",
