--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -362,6 +362,7 @@
       "regular_price": "Regular price",
       "sale_price": "Sale price",
       "sold_out": "Sold Out ",
+      "time_limit_21d": "This product is guaranteed to be sent in less than 21 days",
       "unavailable": "Unavailable",
       "on_sale": "Sale",
       "on_sale_from_html": "On Sale from {{ price }}",
