get prod changes

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -292,7 +292,7 @@
       "same_dates": "Please select 3 different Delivery\/Pickup dates",
       "empty_dates": "Please select 3 preferred Delivery\/Pickup dates",
       "empty_delivery": "Please select your delivery type",
-      "delivery_soil_level_mix": "Due to high demand your BigYellowBag of Soil³ Compost and\/or Level Mix will be delivered on or before August 14th.  Please be on the lookout for a text message from us the day before your delivery with your delivery time window.",
+      "delivery_soil_level_mix": "Due to high demand your BigYellowBag of Soil³ Compost and\/or Level Mix will be delivered on or before August 21st.  Please be on the lookout for a text message from us the day before your delivery with your delivery time window.",
       "notes_placeholder": "example: product placement if delivered, narrow roads, dead ends, gate code, etc.",
       "cannot_mix_methods": "Pickups and Deliveries cannot be combined in the same order.",
       "cannot_mix_pickups": "Pickup stores cannot be combined in the same order.",
