get prod changes

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -280,19 +280,19 @@
       "first_off_truck": "Before 9AM ($149.99)",
       "pickup": "Pickup in store",
       "check_available_dates": "Check available dates",
-      "choose_delivery_type_html": "Step 1: Choose Option <br> **Perishable-Must Install Same Day**",
+      "choose_delivery_type_html": "Step 1: Choose Option <br> **SOD is Perishable-Must Install Same Day**",
       "standard_delivery_explanation": "Between 7AM and 5PM-Text w\/2hr window sent day before",
       "before_noon_explanation": "Guaranteed before 12PM",
       "first_off_truck_explanation": "Guaranteed before 9AM",
       "no_date_available": "There are no available dates for your choice",
-      "delivery_title_html": "Step 2: Preferred Delivery Dates <br> **Perishable-Must Install Same Day**",
-      "pickup_title_html": "Step 2: Preferred Pickup Dates <br> **Perishable-Must Install Same Day**",
+      "delivery_title_html": "Step 2: Preferred Delivery Dates <br> **SOD is Perishable-Must Install Same Day**",
+      "pickup_title_html": "Step 2: Preferred Pickup Dates <br> **SOD is Perishable-Must Install Same Day**",
       "delivery_message": "Note: Fluctuations in demand (time of year) and weather can play a key role in our ability to meet one of your preferred dates.  After our online sales team processes your order, you will receive a confirmation email with your pickup or delivery date. Our online sales team processes orders Monday through Friday 8AM to 5PM. Orders placed on Saturday and Sunday will be processed the following Monday.",
       "invalid_dates": "Selected dates are not valid",
       "same_dates": "Please select 3 different Delivery\/Pickup dates",
       "empty_dates": "Please select 3 preferred Delivery\/Pickup dates",
       "empty_delivery": "Please select your delivery type",
-      "delivery_soil_level_mix": "Due to high demand your BigYellowBag of Soil³ Compost and\/or Level Mix will be delivered on or before August 28th.  Please be on the lookout for a text message from us the day before your delivery with your delivery time window.",
+      "delivery_soil_level_mix": "Please be on the lookout for a text message from us the day before your delivery with your delivery time window!",
       "notes_placeholder": "example: product placement if delivered, narrow roads, dead ends, gate code, etc.",
       "cannot_mix_methods": "Pickups and Deliveries cannot be combined in the same order.",
       "cannot_mix_pickups": "Pickup stores cannot be combined in the same order.",
